--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-mmcontrol",
+  "name": "mmcontrol",
   "version": "0.1.0",
   "description": "mmcontrol provides an easy way to control Mitsubishi heat pumps that use the MAC-558 WiFi adaptor.",
   "main": "index.js",
@@ -9,6 +9,10 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lennyby93/node-mmcontrol.git"
+  },
+  "dependencies": {
+    "restify": "~4.0.0",
+    "async": "~1.5.0"
   },
   "keywords": [
     "mitsubishi",
