--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mmcontrol",
   "version": "0.1.0",
   "description": "mmcontrol provides an easy way to control Mitsubishi heat pumps that use the MAC-558 WiFi adaptor.",
-  "main": "index.js",
+  "main": "libs/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
