--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/lennyby93/node-mmcontrol.git"
   },
   "dependencies": {
-    "restify": "^4.0.0",
+    "restify-clients": "^1.1.0",
     "async": "^1.5.0"
   },
   "keywords": [
